# camden_jan_26

./: .gitignore  README.md
code/: Cargo.toml
code/day1/convert_as/: Cargo.toml
code/day1/convert_as/src/: main.rs
code/day1/delete_string_cpp/: Makefile  delete.cpp  oops
code/day1/enumerations_task/: Cargo.toml
code/day1/enumerations_task/src/: main.rs
code/day1/hello_world/src/: main.rs
code/day1/hello_world_c/: CMakeLists.txt  Makefile  build.sh
code/day1/login_cli/: Cargo.toml  users.json
code/day1/login_cli/src/: main.rs
code/day1/login_lib/: Cargo.toml
code/day1/login_lib/src/: lib.rs
code/day1/move_string_cpp/: Makefile  move.cpp
code/day1/narrowing/: Makefile  narrow.c
code/day1/overflow/: Makefile  overflow.c
code/day1/overflow_rs/: Cargo.toml
code/day1/overflow_rs/src/: main.rs
code/day2/arena_bump/: Cargo.toml
code/day2/arena_bump/src/: main.rs
code/day2/arena_slab/: Cargo.toml
code/day2/arena_slab/src/: main.rs
code/day2/modules/src/: file_module.rs  main.rs
code/day2/tcp_eco/: Cargo.toml
code/day2/ws_actor/: Cargo.toml
code/day2/ws_actor/src/: actor.rs  main.rs
code/day3/macros_demo/: Cargo.toml
code/day3/macros_demo/src/: main.rs
code/day3/no_std_alloc_vec/: Cargo.toml  build.sh  run.sh
code/day3/no_std_alloc_vec/src/: main.rs
code/day3/no_std_math/: Cargo.toml
code/day3/no_std_math_consumer/: Cargo.toml
code/day3/no_std_printf/: Cargo.toml  run.sh
code/day3/no_std_printf_no_panic_handler/: Cargo.toml  build.sh
code/day3/tokio_join/: Cargo.toml
code/src/: main.rs
manual/: book.toml
(+127 files in other folders)
